--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +11,6 @@
         }
     </style>
 </head>
-
 <body>
     <header>
         <h1>Exercicios de HTML</h1>
@@ -31,7 +29,6 @@
     <script>
         document.querySelectorAll('[wm-nav').forEach(link => {
             const conteudo = document.getElementById('conteudo')
-
             link.onclick = function (e) {
                 e.preventDefault()
                 fetch(link.getAttribute('wm-nav'))
@@ -41,20 +38,12 @@
         })
 
         function mostraOcultar(id) {
-    console.log('vou ocultar ' + id);
-    let display = document.getElementById(id).style.display;
-    console.log('display: ' + display);
-    
-    /* if (display == "block" || display == "") 
-        document.getElementById(id).style.display = 'none';
-    else
-        document.getElementById(id).style.display = 'block'; */
-
-    if(display == "none")
-        document.getElementById(id).style.display = 'block';
-    else 
-        document.getElementById(id).style.display = "none";}
+            let display = document.getElementById(id).style.display;
+            if (display == "none")
+                document.getElementById(id).style.display = 'block';
+            else
+                document.getElementById(id).style.display = "none";
+        }
     </script>
 </body>
-
 </html>
